--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -10,3 +10,16 @@
   background-color: var(--theme-light-blue);
   border-radius: 20px;
 }
+
+.side-menu {
+  &-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+}
+
+.error-button {
+  padding: 0 16px;
+}
