--- a/src/app/public/cart/pages/cart-page/cart-page.component.scss
+++ b/src/app/public/cart/pages/cart-page/cart-page.component.scss
@@ -14,6 +14,10 @@
   &__name {
     flex: 1;
   }
+  &__image {
+    max-width: 240px;
+    border-radius: 20px;
+  }
 }
 
 .product-row:last-of-type {
