добавил логику по изменению статусов заявок

--- a/src/app/dashboard/pages/order-history/order-history.component.html
+++ b/src/app/dashboard/pages/order-history/order-history.component.html
@@ -1,10 +1,12 @@
 <div *ngFor="let userOrder of orderHistory$ | async">
+
+  {{ userOrder | json }}
   <h3>Дата: {{ userOrder.orderDateTime }}</h3>
   <div>
     Заказы:
   </div>
-  <div *ngFor="let productOrder of userOrder.productOrder">
-    {{ productOrder.product | json }}
-  </div>
+<!--  <div *ngFor="let productOrder of userOrder.productOrder">-->
+<!--    {{ productOrder.product | json }}-->
+<!--  </div>-->
   <div >На сумму {{ userOrder.sum }}</div>
 </div>
