--- a/src/app/dashboard/pages/user-orders/user-orders.component.html
+++ b/src/app/dashboard/pages/user-orders/user-orders.component.html
@@ -1,12 +1,18 @@
-<div *ngFor="let userOrder of orderHistory$ | async">
-  <h3>Дата: {{ userOrder.orderDateTime }}</h3>
+<div *ngFor="let userOrder of formGroup.controls.userOrders.controls; let i = index">
   <div>
-    Заказы:
+    {{ userOrder.value | json }}
   </div>
-  <div *ngFor="let productOrder of userOrder.productOrder">
-    {{ productOrder.product | json }}
-  </div>
-  <div >На сумму {{ userOrder.sum }}</div>
-  <div>Статус: {{ userOrder.status }}</div>
-  <button (click)="setOrderStatus(userOrder)">Изменить статус</button>
+
+  {{ formGroup.controls.userOrders.controls[i].value.status | json }}
+  <app-combobox
+    [data]="statuses"
+    [value]="formGroup.controls.userOrders.controls[i].value.status"
+    (valueChanges)="statusChanged($event, userOrder.value)"
+  >
+
+  </app-combobox>
+  <br>
+  <br>
+
 </div>
+
