--- a/src/assets/css/_vars.scss
+++ b/src/assets/css/_vars.scss
@@ -12,6 +12,7 @@ $section-padding: 40px;
   --theme-black: #1E1E1E;
   --theme-light-blue: #F5F9FF;
   --theme-blue: #D7E7FF;
+  --theme-accent-blue: #4B6194;
   --theme-dark-blue: #253B6E;
   --theme-light-red: #EF5350;
 }
