--- a/src/app/public/catalog/components/categories/categories.component.scss
+++ b/src/app/public/catalog/components/categories/categories.component.scss
@@ -1,25 +1,38 @@
 :host {
-  border-radius: 20px;
-  padding: 16px;
-  margin-right: auto;
-  color: black;
-  width: 100%;
   display: flex;
-  gap: 8px;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
-.category {
-  border-radius: 8px;
-  padding: 4px;
-  transition: .2s;
-  cursor: pointer;
-  white-space:nowrap;
+.categories__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 32px;
 
-  &:hover {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-  }
+  .categories__item {
+    font-weight: 500;
+    color: var(--theme-black);
+    white-space: nowrap;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
 
-  &_selected {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    &:hover {
+      color: var(--theme-dark-blue);
+    }
+
+    &.active {
+      color: var(--theme-dark-blue);
+    }
   }
+}
+
+.categories__buttons {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
