Сделал стили для картчоки продукта, добавил директорию для картинок

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -11,7 +11,7 @@
           <li>
             <a routerLink="/favourites">
               <div>
-                <svg width="20" height="19" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-favourite"></use></svg>
+                <svg width="20" height="21" stroke="#253B6E" fill="none"><use xlink:href="assets/icons/sprite.svg#icon-favourite"></use></svg>
                 <span class="header-counter">
                 0
               </span>
