--- a/src/app/public/catalog/pages/catalog-page/catalog-page.component.scss
+++ b/src/app/public/catalog/pages/catalog-page/catalog-page.component.scss
@@ -30,6 +30,7 @@
       &__products {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+        gap: 40px;
       }
     }
   }
