--- a/src/app/shared/components/side-menu/side-menu.component.scss
+++ b/src/app/shared/components/side-menu/side-menu.component.scss
@@ -31,8 +31,8 @@
 
       &:hover {
         //box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-        background-color: var(--theme-accent-blue);
-        color: var(--theme-main);
+        //background-color: var(--theme-accent-blue);
+        //color: var(--theme-main);
       }
 
       &.active {
