--- a/src/app/shared/components/side-menu/side-menu.component.scss
+++ b/src/app/shared/components/side-menu/side-menu.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   background-color: var(--theme-blue);
-  color: var(--theme-dark-blue);
+  color: var(--theme-black);
   row-gap: 16px;
   padding: 16px;
   border-radius: 20px;
