--- a/src/assets/css/_main.scss
+++ b/src/assets/css/_main.scss
@@ -21,6 +21,7 @@ form {
   display: block;
   outline: none;
   font-size: 16px;
+  font-family: 'Gilroy', sans-serif;
   background: var(--theme-main);
   border-radius: 8px;
   padding: 12px 20px;
@@ -28,6 +29,17 @@ form {
   width: 100%;
   color: var(--theme-dark-blue);
   border: 1px solid var(--theme-dark-blue);
+
+  &::placeholder {
+    font-family: 'Gilroy', sans-serif;
+    outline: none;
+    background-image: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    color: var(--theme-dark-blue);
+    opacity: 1;
+  }
 }
 
 /*================================Buttons=====================================*/
