--- a/src/app/public/catalog/pages/catalog-page/catalog-page.component.html
+++ b/src/app/public/catalog/pages/catalog-page/catalog-page.component.html
@@ -13,6 +13,14 @@
         (itemSelected)="subcategorySelected($event)"
       >
       </app-side-menu>
+<!--  TODO: доделать    -->
+<!--      <app-filter-->
+<!--        [subcategories]="subcategories$"-->
+<!--        [activeSubcategoryId]="activeSubcategoryId"-->
+<!--        (itemSelected)="subcategorySelected($event)"-->
+<!--      >-->
+
+<!--      </app-filter>-->
     </div>
     <div class="main__wrapper__catalog">
       <div class="main__wrapper__catalog__header">
