навешал гуарды, обновил логику по фильтрации, добавил ползунок для установки диапазона цен

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="side-menu-wrapper">
   <app-side-menu
     class="side-menu"
-    [items]="items$"
+    [items]="items$ | async"
     [activeItemId]="activeItem"
     [isSelectImportant]="true"
     (itemSelected)="itemSelected($event)"
