--- a/src/app/public/catalog/components/filter/filter.component.html
+++ b/src/app/public/catalog/components/filter/filter.component.html
@@ -1,6 +1,16 @@
-<!--<app-side-menu-->
-<!--  [items]="subcategories$"-->
-<!--  [activeItemId]="activeSubcategoryId"-->
-<!--  (itemSelected)="subcategorySelected($event)"-->
-<!--&gt;-->
-<!--</app-side-menu>-->
+<app-side-menu
+  [items]="subcategories"
+  [activeItemId]="activeSubcategoryId"
+  (itemSelected)="subcategorySelected( $event)"
+>
+</app-side-menu>
+
+<ngx-slider
+  [(value)]="minPrice"
+  [(highValue)]="maxPrice"
+  [options]="options"
+  (valueChange)="priceChanged($event, 'minPrice')"
+  (highValueChange)="priceChanged($event, 'maxPrice')"
+>
+
+</ngx-slider>
