--- a/src/app/public/auth/pages/auth-page/auth-page.component.html
+++ b/src/app/public/auth/pages/auth-page/auth-page.component.html
@@ -1,14 +1,18 @@
-<form [formGroup]="formGroup" (ngSubmit)="login()">
+<form [formGroup]="formGroup" (ngSubmit)="login()" class="form">
   <div class="form-group__field">
     <label>Логин</label>
-    <input name="login" formControlName="login" />
+    <input class="main-field" name="login" formControlName="login" />
   </div>
   <div class="form-group__field">
     <label>Пароль</label>
-    <input name="password" formControlName="password" />
+    <input class="main-field" name="password" formControlName="password" />
   </div>
 
-  <button>
+  <div *ngIf="errorMessage" class="error-message">
+    {{ errorMessage }}
+  </div>
+
+  <app-button>
     Отправить
-  </button>
+  </app-button>
 </form>
