--- a/src/app/shared/components/side-menu/side-menu.component.html
+++ b/src/app/shared/components/side-menu/side-menu.component.html
@@ -2,7 +2,7 @@
   <h3>Категории</h3>
   <ul>
     <li
-      *ngFor="let item of items$ | async"
+      *ngFor="let item of items$"
       (click)="selectItem(item.id)"
       [class.active]="item.id === activeItemId"
       class="item"
