изменил файловую архитектуру, добавил логику по добавлению товара, добавил верстку на карточку товара

--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -8,7 +8,7 @@
   cursor: pointer;
   border-radius: 8px;
   padding: 6px 24px;
-  background-color: var(--theme-dark-blue);
+  background-color: var(--theme-accent-blue);
   width: 100%;
   color: var(--theme-main);
   border: none;
