--- a/src/app/catalog/pages/catalog-page/catalog-page.component.html
+++ b/src/app/catalog/pages/catalog-page/catalog-page.component.html
@@ -5,6 +5,7 @@
     [activeCategoryId]="params.categoryId"
     (categorySelected)="categorySelected($event)"
   ></app-categories>
+
   <div class="main__wrapper">
     <div class="main__wrapper__menu">
 <!--      <app-side-menu-->
@@ -23,19 +24,21 @@
       </app-filter>
     </div>
     <div class="main__wrapper__catalog">
-<!--      <div class="main__wrapper__catalog__header">-->
-<!--        <h1>Каталог</h1>-->
-<!--        <div class="main__wrapper__catalog__header__buttons">-->
-<!--          <span class="light-blue-btn">-->
-<!--            <svg width="16" height="20" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-geo"></use></svg>-->
-<!--            Выберите аптеку...-->
-<!--          </span>-->
+      <div class="main__wrapper__catalog__header">
+        <h1>Каталог</h1>
+
+        <div class="main__wrapper__catalog__header__buttons">
+          <ng-container *ngIf="user$ | async as user">
+            <span class="light-blue-btn" (click)="create()" *ngIf="isUserAdmin() | async">
+              Создать
+            </span>
+          </ng-container>
 <!--          <span class="light-blue-btn">-->
 <!--            <svg width="20" height="20" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-sort"></use></svg>-->
 <!--            Сначала дешевле-->
 <!--          </span>-->
-<!--        </div>-->
-<!--      </div>-->
+        </div>
+      </div>
       <div class="main__wrapper__catalog__products">
         <ng-container *ngIf="user$ | async as user; else unauthorized">
           <app-product-card
