--- a/src/app/dashboard/pages/bonus-card/bonus-card.component.html
+++ b/src/app/dashboard/pages/bonus-card/bonus-card.component.html
@@ -1,3 +1,3 @@
 <ng-container *ngIf="(user$ | async) as user">
-  {{ user.userRoom.bonusPoints }} бонусов
+  {{ user?.userRoom?.bonusPoints || 0 }} бонусов
 </ng-container>
