--- a/src/app/catalog/pages/catalog-page/catalog-page.component.html
+++ b/src/app/catalog/pages/catalog-page/catalog-page.component.html
@@ -6,6 +6,9 @@
     (categorySelected)="categorySelected($event)"
   ></app-categories>
 
+  <!-- TODO: сделать фильтр по отпуску с рецептом или без-->
+
+
   <div class="main__wrapper">
     <div class="main__wrapper__menu">
 <!--      <app-side-menu-->
