--- a/src/app/catalog/pages/catalog-page/catalog-page.component.scss
+++ b/src/app/catalog/pages/catalog-page/catalog-page.component.scss
@@ -35,7 +35,7 @@
 
       &__products {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+        grid-template-columns: repeat(auto-fit, 288px);
         gap: 40px;
       }
     }
