--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -11,6 +11,7 @@
   &__content {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 8px 24px;
     background: var(--theme-blue);
     border-radius: 20px;
