--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -5,21 +5,34 @@
   max-width: 1200px;
 }
 
-.content-wrapper {
+.content {
   flex: 1;
   background-color: var(--theme-light-blue);
   border-radius: 20px;
+  min-height: 80vh;
 }
 
 .side-menu {
-  &-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
-  }
+  display: flex;
+  flex-direction: column;
+  width: 288px;
+  background-color: var(--theme-blue);
+  color: var(--theme-black);
+  row-gap: 16px;
+  padding: 16px;
+  border-radius: 20px;
+  min-height: 80vh;
 }
 
 .error-button {
   padding: 0 16px;
+}
+
+.logout-btn {
+  background-color: var(--theme-main);
+  color: var(--theme-dark-blue);
+  padding: 8px;
+  border-radius: 8px;
+  min-height: 36px;
+  width: 100%;
 }
