--- a/src/app/dashboard/pages/bonus-card/bonus-card.component.html
+++ b/src/app/dashboard/pages/bonus-card/bonus-card.component.html
@@ -1,3 +1,6 @@
-<ng-container *ngIf="(user$ | async) as user">
-  {{ user?.userRoom?.bonusPoints || 0 }} бонусов
-</ng-container>
+<div class="section__wrapper">
+  <h2 class="text-accent">Бонусная карта</h2>
+  <ng-container *ngIf="(user$ | async) as user">
+    {{ user?.userRoom?.bonusPoints || 0 }} бонусов
+  </ng-container>
+</div>
