--- a/src/app/dashboard/pages/order-history/order-history.component.html
+++ b/src/app/dashboard/pages/order-history/order-history.component.html
@@ -1,23 +1,25 @@
-<ng-container *ngIf="orderHistory$ | async as orderHistory">
-
-  <div *ngIf="orderHistory.length === 0">
-    Вы ещё не сделали ни одного заказа
-  </div>
-
-  <div *ngFor="let userOrder of orderHistory">
-
-    <h3>Дата заказа: {{ userOrder.orderDateTime | date : 'dd-MM-yyyy в hh:mm' }}</h3>
-    <h3>Ожидаемая дата доставки: {{ userOrder.expectedDate | date : 'dd-MM-yyyy в hh:mm' }}</h3>
-    <div>
-      Заказы:
+<div class="section__wrapper">
+  <h2 class="text-accent">История заказов</h2>
+  <ng-container *ngIf="orderHistory$ | async as orderHistory">
+    <div *ngIf="orderHistory.length === 0">
+      Вы ещё не сделали ни одного заказа
     </div>
-    <div *ngFor="let productOrder of userOrder.productOrder" class="product-order-row">
-      <img class="product-order-row__image" src="{{ productOrder.product.imageUrl }}" alt="">
-      <div>{{ productOrder.product.name }} за {{ productOrder.product.price }} ₽ в количестве {{ productOrder.countProduct }} ({{ productOrder.product.price * productOrder.countProduct }} ₽) </div>
+
+    <div *ngFor="let userOrder of orderHistory">
+
+      <h3>Дата заказа: {{ userOrder.orderDateTime | date : 'dd-MM-yyyy в hh:mm' }}</h3>
+      <h3>Ожидаемая дата доставки: {{ userOrder.expectedDate | date : 'dd-MM-yyyy в hh:mm' }}</h3>
+      <div>
+        Заказы:
+      </div>
+      <div *ngFor="let productOrder of userOrder.productOrder" class="product-order-row">
+        <img class="product-order-row__image" src="{{ productOrder.product.imageUrl }}" alt="">
+        <div>{{ productOrder.product.name }} за {{ productOrder.product.price }} ₽ в количестве {{ productOrder.countProduct }} ({{ productOrder.product.price * productOrder.countProduct }} ₽) </div>
+      </div>
+      <!--  <div *ngFor="let productOrder of userOrder.productOrder">-->
+      <!--    {{ productOrder.product | json }}-->
+      <!--  </div>-->
+      <div >На сумму {{ userOrder.sum }} ₽ </div>
     </div>
-    <!--  <div *ngFor="let productOrder of userOrder.productOrder">-->
-    <!--    {{ productOrder.product | json }}-->
-    <!--  </div>-->
-    <div >На сумму {{ userOrder.sum }} ₽ </div>
-  </div>
-</ng-container>
+  </ng-container>
+</div>
