--- a/src/app/dashboard/pages/user-data/user-data.component.html
+++ b/src/app/dashboard/pages/user-data/user-data.component.html
@@ -1,4 +1,5 @@
 <div class="section__wrapper">
+  <h2 class="text-accent">Личные данные</h2>
   <form [formGroup]="formGroup" (ngSubmit)="updateUserData()">
     <label>
       <span>Фамилия</span>
