--- a/src/app/shared/components/menu-list/menu-list.scss
+++ b/src/app/shared/components/menu-list/menu-list.scss
@@ -16,6 +16,7 @@
       border-radius: 8px;
       cursor: pointer;
       transition: all .2s ease-in-out;
+      min-height: 36px;
 
       &:hover {
         //box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
