--- a/src/app/shared/components/combobox/combobox.component.scss
+++ b/src/app/shared/components/combobox/combobox.component.scss
@@ -10,6 +10,7 @@
   text-align: left;
   border: 1px solid var(--theme-dark-blue);
   border-radius: 10px;
+  transition: border-radius .2s linear;
 
   &.disabled {
     filter: grayscale(50%);
@@ -20,8 +21,6 @@
   }
 
   &.active {
-    border-radius: 10px 10px 0 0;
-
     .select svg {
       transform: rotate(180deg);
     }
@@ -41,14 +40,34 @@
     color: var(--theme-dark-blue);
     user-select: none;
 
+    &:after {
+      content: '';
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      border-radius: 10px;
+    }
+
+    span {
+      position: relative;
+      z-index: 2;
+    }
+
     svg {
+      position: relative;
+      z-index: 2;
       transition: all .3s ease-in-out;
     }
   }
 
   .dropdown-menu {
     position: absolute;
-    top: 100%;
+    top: calc(100% - 10px);
+    padding-top: 10px;
     left: -1px;
     border: 1px solid var(--theme-dark-blue);
     background-color: var(--theme-main);
@@ -58,7 +77,7 @@
     max-height: 245px;
     border-radius: 0 0 10px 10px;
     border-top: none;
-    transition: max-height .3s ease-in-out, height .3s ease-in-out;
+    transition: max-height .4s ease-in-out, height .4s ease-in-out;
     visibility: hidden;
     user-select: none;
 
